FIX: Footer - text wrap on smaller devices

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -893,4 +893,20 @@ h4,
     width: 90px;
     height: 90px;
   }
+
+  .footer-links-index li {
+    font-size: 12px;
+  }
+
+  .footer-legal div {
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    /* display: flex; */
+    /* flex-wrap: wrap; */
+    width: 400px;
+    align-items: center;
+    text-align: center;
+    vertical-align: middle;
+  }
 }
